# AsteroidEngine

./: .gitignore  CMakeLists.txt  README.md
include/: BodyRender.h  Functions.h  Interface.h  Shader.h
include/glad/: glad.h
shaders/: button_fragment_shader.fs  button_vertex_shader.vs  buttonblock_fragment_shader.fs  buttonblock_vertex_shader.vs  global_body_fragment_shader.fs  global_body_vertex_shader.vs  global_button_fragment_shader.fs  global_button_vertex_shader.vs  indiv_body_fragment_shader.fs  indiv_body_vertex_shader.vs  indiv_button_fragment_shader.fs  indiv_button_vertex_shader.vs  interface_fragment_shader.fs  screen_fragment_shader.fs  screen_vertex_shader.vs  slider_fragment_shader.fs  slider_vertex_shader.vs  text_cursor_fragment_shader.fs  text_cursor_vertex_shader.vs  text_fragment_shader.fs  text_vertex_shader.vs  trajectory_fragment_shader.fs  trajectory_vertex_shader.vs
src/: Interface.cpp  desktop.ini  glad.c  main.cpp  stbi_image.cpp
